--- a/src/app/componentes/rkmain/rkpendaprob/rkpendaprob.component.html
+++ b/src/app/componentes/rkmain/rkpendaprob/rkpendaprob.component.html
@@ -14,7 +14,7 @@
     </ng-template>
     <br>
     <br>
-    <mat-slide-toggle (change)="recargar()" [(ngModel)]="complete">Items Completados</mat-slide-toggle>
+    <!-- <mat-slide-toggle (change)="recargar()" [(ngModel)]="complete">Items Completados</mat-slide-toggle> -->
 </div>
 
 <br>
@@ -58,30 +58,38 @@
                 <td class="sticky">
                     <input type="checkbox" class="checkmark" (change)="MarcarJerarquia(item.key,item.status,item.check)" [value]="item.check" [(ngModel)]="item.check">
                     <!-- <ng-template [ngIf]="item.estado < item.statusParent" [ngIfElse]="PadreMayor">
-            
-                                    </ng-template>
-                                    <ng-template #PadreMayor>
-                                        <input readonly type="checkbox" style="align-items: left;" [value]="item.check" [(ngModel)]="item.check">
-            
-                                    </ng-template> -->
+        
+                                </ng-template>
+                                <ng-template #PadreMayor>
+                                    <input readonly type="checkbox" style="align-items: left;" [value]="item.check" [(ngModel)]="item.check">
+        
+                                </ng-template> -->
                 </td>
                 <td class="sticky2">{{item.Accion}}</td>
                 <td>{{item.Comentarios}}</td>
                 <td>{{item.Fecha}}</td>
                 <ng-template [ngIf]="item.Entidad === 'ACTIVIDAD'" [ngIfElse]="Permitido">
 
-                    <td style="font-weight: bold;">{{item.Entidad}}</td>
+                    <td style="font-weight: bold; min-width: 220px;">{{item.Entidad}}
+                        <br>
+                        <span style="font-size: 9px;">{{item.rutaJerarquia}}</span>
+
+                    </td>
 
                 </ng-template>
 
                 <ng-template #Permitido>
 
-                    <td>{{item.Entidad}}</td>
+                    <td style="min-width: 220px;">{{item.Entidad}}
+                        <br>
+                        <span style="font-size: 9px; font-weight: bold">{{item.rutaJerarquia}}</span>
+
+                    </td>
 
                 </ng-template>
 
                 <td><a routerLink="" reload='true' (click)='verTable(item.key)'>
-                                    {{item.Descripcion}}  </a></td>
+                                {{item.Descripcion}}  </a></td>
 
                 <td>{{item.Area}}</td>
                 <td>{{item.Proceso}}</td>
@@ -102,11 +110,19 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end" cdkDragHandle>
-    <button mat-raised-button color="warn" (click)="cerrar()">{{ data.button_close }}</button>
-    <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="accent" (click)="consola('archivar')">Archivar</button>
-    <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="primary" (click)="consola('restaurar')">Restaurar</button>
-    <!-- <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion" mat-raised-button color="accent" (click)="consola()">Re</button> -->
 
+    <button mat-raised-button color="warn" (click)="cerrar()">{{ data.button_close }}</button>
+    <ng-template [ngIf]="!complete" [ngIfElse]="incompletos">
+
+        <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="accent" (click)="consola('archivar')">Archivar</button>
+        <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="primary" (click)="consola('restaurar')">Restaurar</button>
+    </ng-template>
+    <!-- <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion" mat-raised-button color="accent" (click)="consola()">Re</button> -->
+    <ng-template #incompletos>
+
+        <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="accent" (click)="consola('archivar')">Archivar</button>
+        <button *ngIf="btn === creacion || btn === administrador || btn === validacionaprobacion|| btn === creacionvalidacion || btn === creacionaprobacion" mat-raised-button color="primary" (click)="consola('restaurar')">Restaurar</button>
+    </ng-template>
 
 
 </mat-dialog-actions>
