--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -19,3 +19,8 @@
     max-width: 100%;
     overflow-x: scroll;
 }
+
+.swal2-icon.swal2-warning {
+    border-color: red !important;
+    color: #3fc3ee !important;
+}
